fix: horizontal scroll was fixed

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    width: 100vw;
+    width: 100%;
     margin: 0;
     font-size: 10px;
     display: flex;
